@@ -154,6 +154,8 @@
           (http://www.packetfence.org/mantis/view.php?id=685)
         fixed issues with violation add
           (http://www.packetfence.org/mantis/view.php?id=687)
+        new log files for pfdetect and pfredirect
+          (http://www.packetfence.org/mantis/view.php?id=688)
 
 1.8.1
         authorized @ as first symbol in password
